// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogButtons should render a single child without throwing an error 1`] = `
<Segment
  basic={true}
>
  <Container>
    <div>
      Hello World
    </div>
  </Container>
</Segment>
`;

exports[`DialogButtons should render multiple children with a DialogButtons instance without throwing an error 1`] = `
<Segment
  basic={true}
>
  <Container>
    <div
      key=".0"
    >
      Hello
    </div>
    <div
      key=".1"
    >
      World
    </div>
  </Container>
  <DialogButtons
    key=".2"
  />
</Segment>
`;

exports[`DialogButtons should render multiple children without throwing an error 1`] = `
<Segment
  basic={true}
>
  <Container>
    <div
      key=".0"
    >
      Hello
    </div>
    <div
      key=".1"
    >
      World
    </div>
  </Container>
</Segment>
`;
